--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.14.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.6.0",
