--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Endpoints
-VITE_BACKEND_LOGIN_ENDPOINT="http://localhost:8000/auth/jwt/create/"
+VITE_BACKEND_LOGIN_ENDPOINT="http://localhost:8070/api/"
 
 # Don't remember me session expire time (1000 = 1s)
 VITE_SESSION_TIME="10000"
