--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
-    "framer-motion": "^12.6.0",
+    "face-api.js": "^0.22.2",
+    "framer-motion": "^12.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.3.0",
@@ -32,9 +33,11 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-speech-recognition": "^4.0.0",
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "react-typing-effect": "^2.0.5",
+    "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.12"
