--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "react-typing-effect": "^2.0.5",
+    "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.12"
